--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 }
 
 body{
+    background-image:
+    url("C:\Users\dpran\OneDrive\Desktop\bagroundimage.jpeg");
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
