--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
 }
 
 body{
-    background-image:
-    url("C:\Users\dpran\OneDrive\Desktop\bagroundimage.jpeg");
+    background-image:url("C:\Users\dpran\OneDrive\Desktop\lpu_1560430057.jpeg");
+    
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
